--- a/src/components/Home/ServiceDetail/ServiceDetail.css
+++ b/src/components/Home/ServiceDetail/ServiceDetail.css
@@ -1,7 +1,7 @@
 .card-fix{
     text-decoration: none;
     text-align: center;
-	background: #F0FFF0;
+	background: #91ff0059;
 	padding: 30px;
 	border-radius: 15px;
 	transition-duration: 0.3s;
@@ -11,5 +11,8 @@
     text-decoration: none;
     box-shadow: 0px 9px 20px 0px #00000040;
     transform: scale(1.1);
-    background: rgb(241, 241, 188)
+    background: #FCD21D;
+}
+.card-fix:hover h3{
+    text-decoration: none;
 }
